--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
+    "@nivo/bar": "^0.94.0",
+    "@nivo/core": "^0.94.0",
+    "@nivo/line": "^0.94.0",
+    "d3": "^7.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -25,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-gh-pages": "^1.0.1"
   }
 }
