--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@nivo/core": "^0.94.0",
     "@nivo/line": "^0.94.0",
     "d3": "^7.9.0",
+    "pdfjs-dist": "^5.2.133",
+    "plotly.js": "^3.0.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
